Fixed spacing for mobile view

--- a/src/landingpage/navbar/navbar.module.css
+++ b/src/landingpage/navbar/navbar.module.css
@@ -7,5 +7,5 @@
 }
 
 .btn {
-  @apply w-8 h-0.5 bg-white;
+  @apply w-8 h-0.5 bg-white/50;
 }
